# apps-for-calculating-price-per-kilogram

./: CMakeLists.txt  README.md  dockerfile  main  main.cpp
Money/: money.cpp  money.h
